convert repo to React

--- a/vanilla/index.html
+++ b/vanilla/index.html
@@ -9,7 +9,7 @@
 <body>
     <input type="text" id="textBox" />
     <button type="button" id="submitBtn">Submit</button>
-    <img src="" id="pokeImg" />
+    <img src="./poke-assets/swsh12pt5.png" id="pokeImg" />
     <script src="index.js"></script>
 </body>
 </html>
